webook/k8s-webook-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  type: LoadBalancer
  ports:
    - port: 3308
      name: mysql
      protocol: TCP
      targetPort: 3306
  # 筛选带 app:mysql 的 pod
  selector:
    app: webook-mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
#           这两个配置的意思是，mysql 的数据存在 mysql-storage 这个持久化卷的 /mysql 目录下
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-pv-claim
