webook/k8s-webook-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  type: NodePort
  selector:
    app: webook-redis
  ports:
    - port: 6379
      # 外部访问端口 30000~32767
      nodePort: 30379
      #pod 暴露的端口
      targetPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-redis
spec:
  selector:
    matchLabels:
      app: webook-redis
  template:
    metadata:
      labels:
        app: webook-redis
    spec:
      containers:
        - name: webook-redis
          image: redis:latest
          ports:
            - containerPort: 6379
