webook/k8s-webook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
  labels:
    app: webook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webook
  #template 描述pod基本信息
  template:
    metadata:
      name: webook
      labels:
        app: webook
    spec:
      containers:
        - name: webook
          image: bibabo/webook:v0.0.2
          ports:
            - containerPort: 8080


---

apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
